# proof-of-concept-delight

./: README.md  pyproject.toml
proof_of_concept_delight/: app.py  data.py  model.py  train.py
tests/: test_proof_of_concept_delight.py
