[tool.poetry]
name = "proof-of-concept-delight"
version = "0.1.0"
description = ""
authors = ["Joel Grus <jlxg@ml0182592.cguser.capgroup.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.66.0"
spacy = "^2.3.2"
requests = "^2.24.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
